overlap fix

--- a/styles/apprenticeship.scss
+++ b/styles/apprenticeship.scss
@@ -3,7 +3,7 @@
 .panel-about  {
   padding-top: var(--header-reserve);
   .inner {
-    height: 60rem;
+    height: 65rem;
     position: relative;
   }
 
@@ -42,8 +42,8 @@
   }
 
   .pen {
-    left: -6%;
-    top: 30.7rem;
+    left: -2rem;
+    top: 38rem;
     transform: rotate(57deg);
   }
 
